Update pgadmin and pgagent

--- a/components/database/pgadmin/files/pgAdmin4.1
+++ b/components/database/pgadmin/files/pgAdmin4.1
@@ -22,25 +22,25 @@
 .\" Copyright 2010 Sun Microsystems, Inc.  All rights reserved.
 .\" Use is subject to license terms.
 .\"
-.\" #ident	"@(#)pgadmin3.1	1.2	10/03/16 SMI"
+.\" #ident	"@(#)pgAdmin4.1	1.2	10/03/16 SMI"
 .\"
-.TH "pgadmin3" "1" "" "" "User Commands"
+.TH "pgAdmin4" "1" "" "" "User Commands"
 .SH NAME
-pgAdmin III \- administration and development GUI for PostgreSQL
+pgAdmin \- administration and development GUI for PostgreSQL
 .SH SYNOPSIS
 .sp
-\fBpgadmin3\fR [ \fB\fIoption\fB\fR\fI...\fR ]  
+\fBpgAdmin4\fR [ \fB\fIoption\fB\fR\fI...\fR ]  
 
 .SH DESCRIPTION
-pgAdmin III is the most popular and feature rich Open Source administration
-and development platform for PostgreSQL, the most advanced Open Source 
-database in the world. pgAdmin III is designed to answer the needs of most
+pgAdmin 4 is an Open Source administration
+and development platform for PostgreSQL database management system.
+ pgAdmin is designed to answer the needs of most
 users, from writing simple SQL queries to developing complex databases. 
 It includes a graphical administration interface, an SQL query tool, 
 a procedural code editor and much more.
 
 This program is a graphical application and the binary file is available
-in /usr/bin. Simply type "pgadmin3" on a command line to launch the GUI. 
+in /usr/bin. Simply type "pgAdmin4" on a command line to launch the GUI. 
 However, some of the features can be accessed through command line.
 
 .SH "OPTIONS"
@@ -117,7 +117,7 @@ Interface Stability	Committed
 .TE
 
 .SH NOTES
-You may find useful informations in the help menu of pgadmin3.
+You may find useful informations in the help menu of pgAdmin4.
 You may also find Solaris specific PostgreSQL informations in "postgres_82"
 man page. Source for pgAdmin3 is available on http://opensolaris.org.
 .\" End Sun update
@@ -125,7 +125,7 @@ man page. Source for pgAdmin3 is available on http://opensolaris.org.
 
 .SH SEE ALSO
 .PP
-pgagent(1), postgres_82(1), initdb(1), pg_ctl(1), postgres(1), postmaster(1)
+pgagent(1), initdb(1), pg_ctl(1), postgres(1), postmaster(1)
 
 .SH REFERENCES
 .PP
